--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,6 +40,7 @@ services:
       retries: 5
       start_period: 5s
     restart: unless-stopped
+    command: npm run debug
 
   core:
     container_name: gigabot_core
@@ -57,6 +58,7 @@ services:
       server:
         condition: service_healthy
     restart: unless-stopped
+    command: npm run debug
 
   # nlu:
   #   container_name: nlu
